--- a/git/gitconfig.symlink.example
+++ b/git/gitconfig.symlink.example
@@ -4,16 +4,16 @@
 [hub]
         protocol = https
 [user]
-        name = AUTHORNAME
-        email = AUTHOREMAIL
+        name = AUTHOR NAME
+        email = AUTHOR EMAIL
 [credential]
         helper = GIT_CREDENTIAL_HELPER
 [alias]
-        co = checkout
-        promote = !$ZSH/bin/git-promote
-        wtf     = !$ZSH/bin/git-wtf
-        rank-contributors = !$ZSH/bin/git-rank-contributors
-        count   = !git shortlog -sn
+        #co = checkout
+        #promote = !$ZSH/bin/git-promote
+        #wtf     = !$ZSH/bin/git-wtf
+        #rank-contributors = !$ZSH/bin/git-rank-contributors
+        #count   = !git shortlog -sn
 [color]
         diff = auto
         status = auto
